--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "deck.gl": "^8.1.1",
     "mapbox-gl": "^1.9.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-map-gl": "^5.2.3",
+    "react-map-gl-geocoder": "^2.0.11",
     "react-scripts": "3.4.1"
   },
   "scripts": {
