--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^16.13.1",
     "react-map-gl": "^5.2.3",
     "react-map-gl-geocoder": "^2.0.11",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-sidebar": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
