--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-map-gl": "^5.2.3",
     "react-map-gl-geocoder": "^2.0.11",
+    "react-rater": "^5.1.1",
     "react-scripts": "3.4.1",
     "react-sidebar": "^3.0.2"
   },
